fix: JitPack build